--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,16 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0' // Log4j с SLF4J    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
     implementation 'org.apache.poi:poi-ooxml:5.2.3' // Для работы с .xlsx файлами
     implementation 'org.apache.poi:poi:5.2.3'      // Для работы с общими функциями POI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testCompileOnly 'org.projectlombok:lombok:1.18.28'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
 
 tasks.named('test') {
